cahier de charge

--- a/index-WAD-06.html
+++ b/index-WAD-06.html
@@ -29,10 +29,10 @@
     <!-- section home -->
     <section class="home" id="home">
     <div class="home-content">
-        <h3>Hi</h3>
-        <h1>i'm <span>charifa</span></h1>
+        <h3>Bonjour </h3>
+        <h1>je suis <span>charifa</span></h1>
         <h3 class="text-animation">
-          i'm a  <span class="typewriter-text"></span>
+          et je suis   <span class="typewriter-text"></span>
         </h3>
         <p>
         
@@ -51,7 +51,7 @@
             <h2>web application developer</h2> 
           </div>
         </div>
-
+       
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-date">septembre 2016- desembre 2018</div>
@@ -126,7 +126,7 @@
       <h2 class="heading">Portfolio</h2>
 
       <div class="service-container">
-        <div class="services-box">
+        <div class="services-box" id = "project1">
           <i class="bx bxl-php"></i>
           <h3>gestion des recettes</h3>
           <p>
@@ -135,10 +135,11 @@
          </p>
           <a href="https://github.com/charifa93/ProjetWAD24" class="btn">read more</a>
         </div>
-        <div class="services-box">
+
+        <div class="services-box" id = "project2">
         <i class="bx bxl-css3"></i>
 
-          <h3>Java Development</h3>
+          <!-- <h3>Green Hiro</h3> -->
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
             delectus totam dolore, aut atque labore voluptate, nihil animi nulla
@@ -146,10 +147,10 @@
             minima dolores laborum necessitatibus, temporibus optio.
           </p>
 
-          <a href="#" class="btn">Read More</a>
+          <a href="https://github.com/Dj3ni/Hackaton.git" class="btn">Read More</a>
         </div>
 
-        <div class="services-box">
+        <div class="services-box" id = "project3">
           <i class="bx bxs-devices"></i>
 
           <h3>App Development</h3>
@@ -196,7 +197,7 @@
           <a href="https://www.bxl-linkedin-square.com" >
               <i class="bx bxl-linkedin-square"></i>
           </a>
-          <a href="#" >
+          <a href="" >
             <i class='bx bxs-file-pdf'></i>
           </a>
       </div>
